--- a/src/app/google/search/search.component.html
+++ b/src/app/google/search/search.component.html
@@ -6,7 +6,7 @@
             <li><a href="#">Image</a></li>
         </ul>
         <div class="user-img">
-            <img src="../../../assets/img/image-fill.svg" />
+            <img src="../../../assets/img/person-circle.svg" />
         </div>
     </div>
 
