--- a/src/app/google/search-result-img/search-result-img.component.scss
+++ b/src/app/google/search-result-img/search-result-img.component.scss
@@ -1,8 +1,12 @@
-.image-data{
+image-container{
     border: 1px solid;
     height: 222px;
     width: 314px;
     margin-top: 9px;
+}
+
+.image-data{
+
 }
 
 .image-card{
