--- a/src/app/google/search/search.component.html
+++ b/src/app/google/search/search.component.html
@@ -1,13 +1,16 @@
 
 <div class="clearfix">
-    <div class="float-right top-bar">
-        <ul  style="list-style: none;">
+    <div class="top-bar">
+        <span class="mr-3">Gmail</span>
+        <span class="mr-3">Image</span>
+        <!-- <ul  style="list-style: none;">
             <li><a href="#">Gmail</a></li>
             <li><a href="#">Image</a></li>
-        </ul>
-        <div class="user-img">
-            <img src="../../../assets/img/person-circle.svg" />
-        </div>
+        </ul> -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+          </svg>
     </div>
 
 </div>
