--- a/src/app/google/search-result/search-result.component.scss
+++ b/src/app/google/search-result/search-result.component.scss
@@ -253,4 +253,19 @@
 }
 
 
+.menus{
+  align-items: center;
+  display: flex;
+  padding-left: 16px;
+  max-height: 36px;
+  position: relative;
+  left: 320px;
+}
+
+.menus svg {
+  fill: gray;
+  cursor: pointer;
+}
+
+
 
