--- a/src/app/google/search/search.component.scss
+++ b/src/app/google/search/search.component.scss
@@ -124,9 +124,18 @@
     color: gray;
   }
 
-  .top-bar li{
-    display: inline;
-    margin-right: 10px;
-    padding: 3px;
+  .top-bar{
+    align-items: center;
+    display: flex;
+    padding-left: 16px;
+    position: relative;
+    float: right;
+    margin-right: 25px;
     color: gray;
+    //cursor: pointer;
   }
+
+  .top-bar span svg{
+    cursor: pointer;
+  }
+
