--- a/src/app/google/search-result/search-result.component.scss
+++ b/src/app/google/search-result/search-result.component.scss
@@ -115,6 +115,11 @@
   width: 800px;
 }
 
+#searchimgresultsarea{
+  margin-left: 170px;
+  font-family: 'Arial';
+}
+
 .searchresult {
   margin-left: 8px;
 }
