--- a/src/app/google/search/search.component.html
+++ b/src/app/google/search/search.component.html
@@ -1,8 +1,8 @@
 
 <div class="clearfix">
     <div class="top-bar">
-        <span class="mr-3">Gmail</span>
-        <span class="mr-3">Image</span>
+        <span class="mr-3"><a href="https://mail.google.com/mail/u/0/">Gmail</a></span>
+        <span class="mr-3"><a href="#">Image</a></span>
         <!-- <ul  style="list-style: none;">
             <li><a href="#">Gmail</a></li>
             <li><a href="#">Image</a></li>
