--- a/src/app/google/search-result-img/search-result-img.component.scss
+++ b/src/app/google/search-result-img/search-result-img.component.scss
@@ -1,11 +1,13 @@
-image-container{
-    border: 1px solid;
+.image-container{
+   // border: 1px solid;
     height: 222px;
-    width: 314px;
+    width: 219px;
     margin-top: 9px;
+    display: inline-block;
 }
 
 .image-data{
+    padding: 2px;
 
 }
 
@@ -13,6 +15,7 @@ image-container{
     height: 180px;
     background-color: rgba(0,0,0,0.03);
     border-radius: 10px;
+    padding: 2px;
 }
 
 .image-card:hover{
@@ -22,7 +25,8 @@ image-container{
 
 .search-img{
     height: 180px;
-    width: 310px;
-    object-fit: contain;
+    width: 200px;
+  //  object-fit: contain;
+    border-radius: 15px;
 
 }
