--- a/src/app/google/search-result/search-result.component.html
+++ b/src/app/google/search-result/search-result.component.html
@@ -149,13 +149,16 @@
     </div>
 
 
+
+
+</div>
+<div id="searchimgresultsarea" >
     <app-search-result-img
     *ngIf="activeSearchTab !== 'all'"
        [searchImgList]="searchImgList"
     ></app-search-result-img>
-
-
 </div>
+
 
 <hr>
 
